--- a/DB4K/index.html
+++ b/DB4K/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#00878F">
   <link rel="icon" href="img/db4kimages/icon_db4k.ico"> 
+  <script src="script.js"></script>
   <title class="translatable_title">MyMaker</title>
 
   <script src="db4k_setup.js"></script>
