--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <meta charset="utf-8" />
     <title>Redirect</title>
 
-    <meta http-equiv="refresh" content="0; URL='https://projetomymaker.github.io/DB4K/DB4K/'" />
+    <meta http-equiv="refresh" content="0; URL='https://loguitolegal.github.io/DB4K-Test/DB4K'" />
 </head>
 </html>
